# Copyright (c) 2022-2026, The Isaac Lab Project Developers (https://github.com/isaac-sim/IsaacLab/blob/main/CONTRIBUTORS.md).
# All rights reserved.
#
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=70.0,<82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaaclab_assets"
version = "0.4.0"
description = "Extension containing configuration instances of different assets and sensors."
license = {text = "BSD-3-Clause"}
authors = [{name = "Isaac Lab Project Developers"}]
maintainers = [{name = "Isaac Lab Project Developers"}]
keywords = ["kit", "robotics", "assets", "isaaclab"]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/isaac-sim/IsaacLab"
Repository = "https://github.com/isaac-sim/IsaacLab"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["isaaclab_assets", "isaaclab_assets.*"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]
