# Copyright (c) 2022-2026, The Isaac Lab Project Developers (https://github.com/isaac-sim/IsaacLab/blob/main/CONTRIBUTORS.md).
# All rights reserved.
#
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=70.0,<82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaaclab_ovphysx"
version = "3.2.0"
description = "Extension providing IsaacLab with ovphysx/TensorBindingsAPI specific abstractions."
license = {text = "BSD-3-Clause"}
authors = [{name = "Isaac Lab Project Developers"}]
maintainers = [{name = "Isaac Lab Project Developers"}]
keywords = ["robotics", "simulation", "ovphysx", "tensorbindingsapi"]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/isaac-sim/IsaacLab"
Repository = "https://github.com/isaac-sim/IsaacLab"

[project.optional-dependencies]
ovphysx = ["ovphysx==0.4.13"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["isaaclab_ovphysx", "isaaclab_ovphysx.*"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]
